--- a/index.css
+++ b/index.css
@@ -127,19 +127,19 @@ strong{
     background: linear-gradient(hsl(236, 72%, 79%), hsl(237, 63%, 64%));
    transform: scale(1.1);
 }
-.card1:hover {
+/* .card1:hover { 
    background: linear-gradient(hsl(236, 72%, 79%), hsl(237, 63%, 64%));
    transform: scale(1.1);
-}
+}*/
 
-.card1:hover p{
+/* .card1:hover p{ 
    color:white;
-}
+}*/
 
-.card1:hover button{
+/* .card1:hover button{ 
    background: white;
    color: hsl(237, 63%, 64%);
-}
+}*/
 
 
 
